Convert tabs to spaces, fix header menu on mobile and font weights

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -8,7 +8,7 @@
     font-size: 18px;
 }
 
-.footer .subheader{
+.footer .subheader {
     color: #FFFFFF;
     font-weight: bolder;
 }
@@ -31,4 +31,5 @@
 
 .footer .images img {
     margin-right: 20px;
+    cursor: pointer;
 }
