--- a/styles/shared.css
+++ b/styles/shared.css
@@ -2,6 +2,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: Montserrat;
+    font-weight: 600;
 }
 
 h1, h2, h3, h4, h5, h6, p, span {
